# haskell-xml-infer

./: .gitignore  .travis.yml  README.md  xml-infer.cabal
examples/: entities.xml
src/: Main.hs  XmlEvents.hs  XmlInfer.hs  XmlParse.hs  XmlTree.hs
