name:                xml-infer
version:             0.1.0.0
synopsis:            Infer XML schema from XML files
description:         Please see README.md
homepage:            https://github.com/scott-fleischman/haskell-xml-infer
license:             MIT
license-file:        LICENSE
author:              Scott Fleischman
maintainer:          example@example.com
copyright:           2016 Scott Fleischman
build-type:          Simple
cabal-version:       >=1.10

executable xml-infer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    text >= 1.2,
    resourcet >=1.1,
    xml-types >=0.3,
    conduit >=1.2,
    xml-conduit >=1.3,
    filepath >=1.4,
    filemanip >=0.3,
    optparse-applicative >=0.12
