name:                xml-infer
version:             0.1.0.0
synopsis:            Infer XML schema from XML files
description:         Please see README.md
homepage:            https://github.com/scott-fleischman/haskell-xml-infer
license:             MIT
license-file:        LICENSE
author:              Scott Fleischman
maintainer:          scott-fleischman@users.noreply.github.com
copyright:           2016 Scott Fleischman
build-type:          Simple
cabal-version:       >=1.10

executable xml-infer
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    XmlEvents,
    XmlInfer,
    XmlParse,
    XmlTree
  ghc-options: -Wall -Werror -fwarn-tabs -O2
  default-language: Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    containers >=0.5,
    text >= 1.2,
    resourcet >=1.1,
    xml-types >=0.3,
    conduit >=1.2,
    conduit-extra >=1.1,
    conduit-combinators >=1.0,
    xml-conduit >=1.3,
    filepath >=1.4,
    directory >=1.2,
    filemanip >=0.3,
    optparse-applicative >=0.12,
    megaparsec >=4.4
